--- a/Assets/css/style-ethique.css
+++ b/Assets/css/style-ethique.css
@@ -163,12 +163,11 @@ body {
 .section-benefices{color: #f1f6fb;}
 
 .section-cas {
-  background: linear-gradient(135deg, #002b5b, #004080);
+   background: linear-gradient(135deg, #e6f2ff, #c6e0ff);
   padding: 80px 0;
-  color: #f2f4ff;
-  border-top: 3px solid #7cc4ff;
+  border-top: 3px solid #9ecbff;
 }
-.section-cas{color:  #002b5b;}
+.section-cas{color:  #e6f2ff;}
 /*BLOC*/
 .bloc-ethique p,
 .bloc-introduction p,
