--- a/Assets/css/style-ethique.css
+++ b/Assets/css/style-ethique.css
@@ -264,8 +264,8 @@ footer {
 
 /* Logos principa*/
 #YWH, #Y {
-    max-width: 80px; 
-    height: auto;
+     width: 40px;
+    height: 40px;
     margin: 0 10px;
     display: inline-block;
 }
