--- a/Assets/css/style-ethique.css
+++ b/Assets/css/style-ethique.css
@@ -400,11 +400,7 @@ footer>p{
   margin: 0;
 }
 footer #mentions{
-  margin-top: 330px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.5);
+  float: left;
 }
 /*-------FIN------*/
 
