--- a/Assets/css/styleEco.css
+++ b/Assets/css/styleEco.css
@@ -16,274 +16,15 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
+.chau-philomene-one-regular {
+  font-family: "Chau Philomene One", sans-serif;
+  font-weight: 400;
+  font-style: normal;}
 /*--------------*/
 
-
-/*■■■■■■■■■■■■■■ - Entré de Page - ■■■■■■■■■■■■■■*/
-
-
-
-.Section01 {
-  position: relative;
-  height: 90vh;
-  overflow: hidden;
-}
-
-
-.MAIN {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-  gap: 2%;
-  padding: 0 3%;
-}
-
-/*BackGround*/
-
-.background {
-  position: absolute;
-  inset: 0;                
-  height: 100%;
-  object-fit: cover;
-  z-index: 0;
-  filter: brightness(0.65); 
-}
-
-.MAIN img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-
-.bloc_image { 
-  display: flex;
-  max-width: 700px;
-  width: 50%;
-  margin-left: 7%;
-  z-index: 1;
-}
-
-/*Informaticien*/
-
-.bloc_image img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-}
-
-
-.bloc_texte {
-  
-  width: 50%;
-  min-width: 300px;
-  z-index: 2;     
-  text-align: left;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 0.8rem;
-  padding: 1rem;
-}
-
-
-.bloc_texte h1 {
-  letter-spacing: 5px;
-  font-family: 'Anton', sans-serif;
-  font-size: 4em;
-  text-align: center;
-  color: #fff;
-}
-
-.bloc_texte p {
-  font-size: 200%;
-  margin: 0;
-  text-align: center;
-  color: #eee;
-}
-
-/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
-
-
-
-.bar01{
-  height: 7vh;
-  background-color: rgb(213, 233, 232);
-}
-
-
-/*■■■■■■■■■■■■■■ - SECTION N*2 - ■■■■■■■■■■■■■■*/
-
-.premiere{
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-  gap: 2%;
-  padding: 0 3%;
-}
-
-.premiere div{
-  margin: 10%;
-  padding: 10%;
-  background-color: rgb(213, 233, 232);
-
-  border-radius: 40px;
-}
-
-.premiere div h1{
-  text-align: center;
-  font-size: 2em;
-  font-family: 'Anton', sans-serif;
-  color: rgb(39, 39, 39);
-}
-
-.premiere div p{
-  text-align: center;
-  font-size: 1.5em;
-  color: rgb(39, 39, 39);
-}
-
-.itemCube{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.cube01{
-  background-color: aquamarine;
-  border-radius: 10px;
-  width: 15%;
-  height: calc(15vw);
-  position: absolute;
-  margin: 48% 80% 0% 0%;
-  z-index: 2;
-  border-top: 5px solid rgb(25, 168, 173);
-  max-width: 200px;
-  max-height: 200px;
-}
-
-.cube01_1{
-  background-color: aquamarine;
-  border-radius: 10px;
-  width: 12%;
-  height: calc(9vw);
-  position: absolute;
-  margin: 62% 70% 0% 0%;
-  z-index: 2;
-  max-width: 170px;
-  max-height: 150px;
-}
-
-.cube02{
-  background-color: aquamarine;
-  border-radius: 10px;
-  width: 10%;
-  height: calc(15vw);
-  position: absolute;
-  margin: 68% 0% 0% 75%;
-  z-index: 0;
-  border-top: 5px solid rgb(25, 168, 173);
-}
-
-/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
-
-/*■■■■■■■■■■■■■■ - SECTION N*3 - ■■■■■■■■■■■■■■*/
-
-.seconde {
-  position: relative;
-  overflow: hidden;
-}
-
-.background02 {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(15px) brightness(0.7);
-  z-index: 0;
-  transform: scale(1.75);
-}
-
-.MAIN02 {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  z-index: 1;
-}
-
-.MAIN02 div{
-  margin: 5%;
-  padding: 2%;
-  background: rgba(255, 255, 255, 0.15);
-  border-radius: 20px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  z-index: 1;
-}
-
-.MAIN02 div img{
-  width: 100%;
-  height: auto;
-
-}
-
-.MAIN02 div h2{
-  text-align: center;
-  font-size: 2em;
-  font-family: 'Anton', sans-serif;
-  color: rgb(39, 39, 39);
-}
-
-
-/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
-
-
-/*■■■■■■■■■■■■■■ - SECTION N*4 - ■■■■■■■■■■■■■■*/
-
-.MAIN03 {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  z-index: 1;
-}
-.MAIN03 div{
-  margin: 2%;
-  padding: 2%;
-  z-index: 1;
-}
-
-.MAIN03 div h2{
-  color: rgb(54, 140, 173);
-  text-align: center;
-  font-size: 1.3em;
-  font-family: 'Anton', sans-serif;
-}
-
-.MAIN03 div p{
-  text-align: center;
-  font-size: 1.1em;
-  color: rgb(39, 39, 39);
-}
-
-
-
-/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
-
-/*■■■■■■■■■■■■■■ - NAV BAR - ■■■■■■■■■■■■■■*/
-
+/*-------------NAV-BAR--------------*/
+/*-------DEBUT------*/
 header {
   align-items:center;
   justify-content:center;
@@ -296,7 +37,7 @@ header {
   transition: all 0.8s ease-in-out;
   backdrop-filter: blur(10px);
   z-index: 5;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 10px 20px rgba(255, 255, 255, .2), 5px 5px 5px rgba(0, 0, 0, 0.1);
   font-family:'Times New Roman', Times, serif;
 }
 header::before{
@@ -335,21 +76,22 @@ nav {
   padding: 5px;
 }
 
-nav  button{
+nav  a{
   text-decoration: none;
   color: rgb(0, 0, 0);
   position: relative;
   font-weight: 300;
   font-size: 24px;
-  padding: 30px 20px;
+  padding: 20px 20px;
   display: inline-block;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
   border-style: none;
 }
-nav button:hover , button span:hover{
-  text-shadow: 5px 5px 5px rgba(255, 255, 255, 1);
+nav a:hover , a span:hover{
+  text-shadow: 5px 5px 5px rgba(255, 255, 255, 0.8);
 }
+
 nav #HISTOIRE{
   display: inline-block;
   position: relative;
@@ -364,7 +106,7 @@ nav #HISTOIRE:after {
   transition: 0.5s;
 }
 
-nav #HISTOIRE:hover {
+#HISTOIRE:hover {
   padding-right: 25px;
 }
 
@@ -372,7 +114,6 @@ nav #HISTOIRE:hover::after{
   opacity: 1;
   right: 0;
 }
-
 
 nav #ECONOMIE{
   display: inline-block;
@@ -396,7 +137,6 @@ nav #ECONOMIE:hover::after{
   opacity: 1;
   right: 0;
 }
-
 nav #FONCTIONNEMENT{
   display: inline-block;
   position: relative;
@@ -442,3 +182,536 @@ nav #ETHIQUE:hover::after{
   opacity: 1;
   right: 0;
 }
+
+/*-------FIN------*/
+/*-------------NAV-BAR--------------*/
+
+
+/*■■■■■■■■■■■■■■ - Entré de Page - ■■■■■■■■■■■■■■*/
+
+
+
+.Section01 {
+  position: relative;
+  height: 90vh;
+  overflow: hidden;
+}
+
+
+.MAIN {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  gap: 2%;
+  padding: 0 3%;
+}
+
+/*BackGround*/
+
+.background {
+  position: absolute;
+  inset: 0;                
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: 0;
+  filter: brightness(0.65); 
+}
+
+
+/*Informaticien*/
+
+.bloc_image { 
+  display: flex;
+  max-width: 700px;
+  width: 50%;
+  margin-left: 7%;
+  z-index: 1;
+}
+
+
+
+.bloc_image img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+}
+
+
+.bloc_texte {
+  
+  width: 50%;
+  min-width: 300px;
+  z-index: 2;     
+  text-align: left;
+  color: #F2F4FF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.8rem;
+  padding: 1rem;
+}
+
+
+.bloc_texte h1 {
+  letter-spacing: 5px;
+  font-family: 'Anton', sans-serif;
+  font-size: 4em;
+  text-align: center;
+  color: #F2F4FF;
+}
+
+.bloc_texte p {
+  font-size: 200%;
+  margin: 0;
+  font-family: "Chau Philomene One", sans-serif;
+  text-align: center;
+  color: #F2F4FF;
+}
+
+/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+
+
+
+.bar01{
+  height: 7vh;
+  background-color: #A9D3FF;
+}
+
+
+/*■■■■■■■■■■■■■■ - SECTION N*2 - ■■■■■■■■■■■■■■*/
+
+
+.premiere{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  gap: 2%;
+  padding: 0 3%;
+}
+
+.premiere div{
+  margin: 10%;
+  padding: 10%;
+  background-color: #A9D3FF;
+  border-bottom: 8px solid #96C5F7;
+  border-radius: 40px;
+}
+
+.premiere div h1{
+  text-align: center;
+  font-size: 3em;
+  font-family: 'Anton', sans-serif;
+  color: rgb(39, 39, 39);
+}
+
+.premiere div p{
+  text-align: center;
+  font-family: "Chau Philomene One", sans-serif;
+  font-size: 2.2em;
+  color: rgb(39, 39, 39);
+}
+
+
+/*-----------------------------*/
+
+/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+
+/*■■■■■■■■■■■■■■ - SECTION N*3 - ■■■■■■■■■■■■■■*/
+
+.seconde {
+  position: relative;
+  overflow: hidden; 
+}
+
+/*ajout du descriptif du graph a droit*/
+
+/*hover*/
+
+
+.select{
+  opacity: 0;
+  display: none;
+  position: absolute;
+  width: 170%;
+  height: 120%;
+  margin-left: 70%;
+  z-index: -1;
+}
+
+
+.item03:not(:hover){
+  opacity: 60%;
+  width: 20%;
+  height: 20%;
+
+}
+
+
+.item03:hover{
+  margin: 2% 30% 2% 10%;
+  padding: 1%;
+
+}
+
+.item03:hover .select{
+  display: block;
+
+}
+
+.item03:hover img{
+  width: calc(40vw);
+
+}
+
+.item03:hover .detail03{
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 165%; 
+  margin-top: 40%;
+  opacity: 1;
+  display: flex;
+  width: 60%;
+  
+
+}
+
+.item03:hover h2{
+  opacity: 0;
+  display: none;
+
+}
+
+/*-----*/
+
+.detail03{
+  position: absolute;
+  font-family: "Chau Philomene One", sans-serif;
+  margin-top: 100%;
+  margin-left: 0%;            
+  transform: translateY(-50%); 
+  opacity: 0;                
+  transition: margin-left 0.5s ease, opacity 0.5s ease;
+  width: 90%;
+
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+.detail03 h2{
+  text-align: center;
+  font-size: 2em;
+  font-family: 'Anton', sans-serif;
+  color: rgb(39, 39, 39);
+  opacity: 1;
+  transition: opacity 0.4s ease;
+}
+
+.detail03 p{
+  text-align: center;
+  font-size: 1.4em;
+  color: rgb(39, 39, 39);
+}
+
+
+
+
+/*-----------------------------*/
+
+/*BACKGROUND BLUR*/
+.background02 {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(15px) brightness(0.7);
+  z-index: 0;
+  transform: scale(1.75);
+}
+/*---------------------------------*/
+
+
+.MAIN03 { /*CONTENEUR*/
+  width: 100%;
+  height: calc(50vw);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+
+/*--------------------*/
+
+/*ITEM*/
+.item03{ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+
+  transition: all 0.3s ease;
+
+  margin: 5%;
+  padding: 2%;
+  height: 60%;
+  min-height: 60%;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  z-index: 1;
+}
+
+.item03 img{
+  width: 100%;
+  height: auto;
+
+}
+
+.item03 h2{
+  display: block;
+  text-align: center;
+  font-size: 2em;
+  font-family: 'Anton', sans-serif;
+  color: rgb(39, 39, 39);
+}
+
+.item03 h1{
+  display: block;
+  text-align: center;
+  font-size: 2em;
+  font-family: 'Anton', sans-serif;
+  color: rgb(39, 39, 39);
+}
+
+/*--------------------*/
+
+/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+
+
+/*■■■■■■■■■■■■■■ - SECTION N*4 - ■■■■■■■■■■■■■■*/
+
+.MAIN04 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+.MAIN04 div{
+  margin: 2%;
+  padding: 2%;
+  z-index: 1;
+}
+
+.Item04{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  flex-direction: column;
+  height: 100%;
+
+  background-color: #A9D3FF;
+  border-bottom: 8px solid #96C5F7;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+
+.title h2{
+  color: #426a96;
+  text-align: center;
+  font-size: 1.6em;
+  font-family: 'Anton', sans-serif;
+}
+
+.title img{
+  width: 70px;
+  height: 70px;
+  height: auto;
+}
+
+.texte p{
+  text-align: center;
+  font-family: "Chau Philomene One", sans-serif;
+  font-size: 1.4em;
+  color: rgb(39, 39, 39);
+}
+
+
+
+/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+
+
+
+
+
+footer{
+  background-color: var(--bleu-clair);
+  display: block;
+  margin: 0;
+  padding: 0;
+  height: 450px;
+  justify-content: end;
+  color: aliceblue;
+  padding: 100px 120px 50px;
+  gap: 20px;
+  bottom: 0;
+  overflow:hidden;
+  border-top: solid 1px var(--anthracite);
+}
+footer .reseaux {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: row;
+  margin-left: 30px;
+  position: absolute;
+  margin-top: 110px;
+  margin-left: 10px;
+}
+footer .reseaux a {
+  width: 3%;
+  gap: 25px;
+  margin: 10px 10px 10px 0px;
+  transition: all .2s ease-in-out;
+}
+footer .reseaux img{
+  width: 100%;
+  border-radius: 50%;
+}
+#logo_SN{
+  margin-left: 100px;
+}
+#logo_SL1:hover{
+  scale: 1.1;
+}
+#logo_SL2:hover{
+  scale: 1.1;
+}
+#logo_SL3:hover{
+  scale: 1.1;
+}
+#logo_SL4:hover{
+  scale: 1.1;
+}
+#logo_SN:hover{
+  scale: 1.1;
+}
+footer .liens{
+  text-align: center;
+  color: black;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-direction: row;
+  float: right;
+  border: 1px solid rgba(200, 200, 200, 0.2);
+  gap: 20px;
+  padding: 20px;
+  border-radius: 20px;
+}
+footer .liens > div{
+  border: 1px dashed rgba(100, 100, 100, 0.1);
+  padding: 30px;
+  border-radius: inherit;
+}
+footer .liens h1{
+  margin: 0 0 30px 0;
+  font-size: 30px;
+}
+footer .sous-liens p{
+  color: black;
+  text-decoration: black;
+}
+footer .histoire{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+}
+.suivre{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: row;
+  float: left;
+  color: black;
+  padding-right: 10px;
+}
+#Suivez-les{
+  text-align: left;
+  margin-left: 85px;
+  margin-top: 40px;
+  width: 70px;
+  font-weight: bold;
+}
+#SN_hr{
+  float: left;
+  margin-top: 0;
+  width: 50px;
+  margin-left: 90px;
+  margin-right: 0;
+  color:  #e60000;
+  border-color: #e60000;
+  border-radius: 10px;
+}
+#Suivez-nous{
+  float: right;
+  margin-left: 145px;
+  margin-top: 40px;
+  margin-bottom: 0;
+  padding-top: 0;
+  font-weight: bold;
+}
+#SL_hr{
+  margin-top: 0;
+  width: 50px;
+  float: right;
+  color:  #224cf4;
+  border-color: #224cf4;
+  border-radius: 10px;
+  margin-right: 90px;
+}
+footer>p{
+  padding-top: 50px;
+  text-align: center;
+  margin-top: 0;
+  color: black;
+}
+#YWH{
+  width: 20%;
+  float: left;
+  margin-right: 15px;
+}
+#Y{
+  width: 10%;
+  float: left;
+}
+#img_acceuille{
+  width: 100%;
+  margin: 0;
+}
+footer #mentions{
+  float: left;
+}
+/*-------FIN------*/
