--- a/Assets/css/Styles_fonctionnement.css
+++ b/Assets/css/Styles_fonctionnement.css
@@ -525,7 +525,9 @@ footer>p{
   margin: 0;
 }
 footer #mentions{
-  position: absolute;
-  margin: 17% 40% 0% 40%;
-  z-index: 1;
+  margin-top: 330px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.5);
 }
